<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.stellkey.android.view.carer.account.AccountViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_bg"
        tools:context=".view.carer.account.LogActivityFragment">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_x3"
            android:src="@drawable/ic_back_black"
            app:layout_constraintBottom_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvTitle" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_x3"
            android:fontFamily="@font/sofia_pro_bold"
            android:letterSpacing="0"
            android:text="@string/log_activity"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_x4"
            android:fontFamily="@font/sofia_pro_semibold"
            android:letterSpacing="0"
            android:text="@string/time_range"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/ivBack"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <RadioGroup
            android:id="@+id/rgDeleteLogOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_x2"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/tvDesc"
            app:layout_constraintTop_toBottomOf="@id/tvDesc">

            <RadioButton
                android:id="@+id/rbLastDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sofia_pro_regular"
                android:letterSpacing="0"
                android:padding="@dimen/space_x2"
                android:text="@string/last_24_hours"
                android:textColor="@color/light_black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbLastWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sofia_pro_regular"
                android:letterSpacing="0"
                android:padding="@dimen/space_x2"
                android:text="@string/last_7_days"
                android:textColor="@color/light_black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbLastMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sofia_pro_regular"
                android:letterSpacing="0"
                android:padding="@dimen/space_x2"
                android:text="@string/last_4_weeks"
                android:textColor="@color/light_black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sofia_pro_regular"
                android:letterSpacing="0"
                android:padding="@dimen/space_x2"
                android:text="@string/all"
                android:textColor="@color/light_black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_x8"
            android:layout_marginEnd="@dimen/space_x8"
            android:layout_marginBottom="@dimen/space_x14"
            android:backgroundTint="@color/primary_disabled"
            android:clickable="false"
            android:elevation="0dp"
            android:enabled="false"
            android:fontFamily="@font/sofia_pro_semibold"
            android:letterSpacing="0"
            android:padding="@dimen/space_x1_quarter"
            android:text="@string/save_changes"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/space_x2"
            app:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_x1_half"
            android:fontFamily="@font/sofia_pro_regular"
            android:letterSpacing="0"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSave" />

        <View
            android:layout_width="135dp"
            android:layout_height="5dp"
            android:layout_marginBottom="@dimen/space_x1"
            android:background="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>