<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_bg"
    tools:context=".view.onboarding.OnBoardingFinishFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_x4"
        android:fontFamily="@font/sofia_pro_semibold"
        android:letterSpacing="0"
        android:text="@string/onboarding_finish_title"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/tvDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sofia_pro_regular"
        android:letterSpacing="0"
        android:lineHeight="@dimen/space_x2_half"
        android:maxWidth="@dimen/space_x28"
        android:text="@string/onboarding_finish_desc"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStartStellkey"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_x8"
        android:layout_marginTop="@dimen/space_x2"
        android:layout_marginEnd="@dimen/space_x8"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="0dp"
        android:fontFamily="@font/sofia_pro_semibold"
        android:letterSpacing="0"
        android:padding="@dimen/space_x1_quarter"
        android:text="@string/onboarding_start_stellkey"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/space_x2"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDesc" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTryAgain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_x8"
        android:layout_marginTop="@dimen/space_x1"
        android:layout_marginEnd="@dimen/space_x8"
        android:backgroundTint="@color/primary_disabled"
        android:elevation="0dp"
        android:fontFamily="@font/sofia_pro_semibold"
        android:letterSpacing="0"
        android:padding="@dimen/space_x1_quarter"
        android:text="@string/onboarding_try_again"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/space_x2"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnStartStellkey" />

</androidx.constraintlayout.widget.ConstraintLayout>