<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/transparent"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="0dp"
    app:cardCornerRadius="@dimen/space_x3"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_x1_half"
        android:padding="@dimen/space_x1"
        android:background="@android:color/transparent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_x3"
            android:layout_marginStart="@dimen/space_x2"
            android:layout_marginEnd="@dimen/space_x2"
            android:fontFamily="@font/sofia_pro_semibold"
            android:letterSpacing="0"
            android:text="@string/dialog_confirmation_custom_task_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_x2"
            android:layout_marginStart="@dimen/space_x2"
            android:layout_marginEnd="@dimen/space_x2"
            android:fontFamily="@font/sofia_pro_regular"
            android:letterSpacing="0"
            tools:text="@string/dialog_confirmation_custom_task_desc"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:lineSpacingMultiplier="1.5"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clButtons"
            app:layout_constraintTop_toBottomOf="@id/tvDesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/space_x3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:elevation="0dp"
                android:fontFamily="@font/sofia_pro_semibold"
                android:letterSpacing="0"
                android:padding="@dimen/space_x1_quarter"
                android:text="@string/got_it"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/space_x3"
                app:elevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>